website/versioned_docs/version-2.14.x/reference/targets/shunit2_tests.mdx
---
title: shunit2_tests
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `shunit2_test` target for each file in the `sources` field.

Backend: <span className="color--primary">`pants.backend.shell`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('*_test.sh', 'test_*.sh', 'tests.sh')`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['test.sh', 'test_*.sh', '!test_ignore.sh']`

</Field>

## `overrides`

<Field
    type_repr={`field.type_hint`}
>

Override the field values for generated `{generated_target_name}` targets.

Expects a dictionary of relative file paths and globs to a dictionary for the overrides. You may either use a string for a single path / glob, or a string tuple for multiple paths / globs. Each override is a dictionary of field names to the overridden value.

For example:
```
overrides={
    "foo_test.sh": {"timeout": 120},
    "bar_test.sh": {"timeout": 200},
    ("foo_test.sh", "bar_test.sh"): {"tags": ["slow_tests"]},
}
```

File paths and globs are relative to the BUILD file's directory. Every overridden file is validated to belong to this target's `sources` field.

If you&#x27;d like to override a field&#x27;s value for every `shunit2_test` target generated by this target, change the field directly on this target rather than using the `overrides` field.

You can specify the same file name in multiple keys, so long as you don&#x27;t override the same field more than one time for the file.

</Field>

## `skip_shellcheck`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.shell.lint.shellcheck"
>

If true, don&#x27;t run Shellcheck on this target&#x27;s code.

</Field>

## `skip_shfmt`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.shell.lint.shfmt"
>

If true, don&#x27;t run shfmt on this target&#x27;s code.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.14/docs/targets for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `timeout`

<Field
    type_repr={`field.type_hint`}
>

A timeout (in seconds) used by each test file belonging to this target.

If unset, will default to `[test].timeout_default`; if that option is also unset, then the test will never time out. Will never exceed `[test].timeout_maximum`. Only applies if the option `--test-timeouts` is set to true (the default).

</Field>

## `skip_tests`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run this target&#x27;s tests.

</Field>

## `shell`

<Field
    type_repr={`field.type_hint`}
>

Which shell to run the tests with. If unspecified, Pants will look for a shebang line.

</Field>

## `runtime_package_dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to targets that can be built with the `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 package` goal and whose resulting artifacts should be included in the test run.

Pants will build the artifacts as if you had run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 package`. It will include the results in your test&#x27;s chroot, using the same name they would normally have, but without the `--distdir` prefix (e.g. `dist/`).

You can include anything that can be built by `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 package`, e.g. a `pex_binary`, `python_awslambda`, or an `archive`.

</Field>



</span>